order-service/kubernates/kafka-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kafka-pod
  namespace: microservices
  labels:
    app: kafka
spec:
  containers:
    - name: kafka
      image: confluentinc/cp-kafka:7.5.0
      ports:
        - containerPort: 9092
