order-service/kubernates/order-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: order-service-pod
  namespace: microservices
  labels:
    app: order-service
spec:
  containers:
    - name: order-service
      image: order-management-system-order-service:latest
      imagePullPolicy: Never
      ports:
        - containerPort: 8080
