order-service/kubernates/zookeeper-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: zookeeper-pod
  namespace: microservices
  labels:
    app: zookeeper
spec:
  containers:
    - name: zookeeper
      image: confluentinc/cp-zookeeper:7.5.0
      ports:
        - containerPort: 2181
