order-service/kubernates/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - port: 9092
      targetPort: 9092
