order-service/kubernates/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: order-service
  ports:
    - port: 8080
      targetPort: 8080
