order-service/kubernates/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-service
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: zookeeper
  ports:
    - port: 2181
      targetPort: 2181
